--- a/src/Pages/LandingPage/styles/home.module.css
+++ b/src/Pages/LandingPage/styles/home.module.css
@@ -4,11 +4,15 @@
     z-index: 5;
 }
 
-
-body, html{
+.main{
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     overflow: hidden;
 }
-
 .polygon{
     height: 100vh;
     width: 100vw;
