responsiveness of carousel changed

--- a/src/Pages/Sponsors/styles/home.module.css
+++ b/src/Pages/Sponsors/styles/home.module.css
@@ -481,7 +481,7 @@ input[type="submit"]{
   .whysponsorus {
     padding-top: 8rem;
     padding-bottom: 15rem;
-    margin-top: -35vh;
+    margin-top: -20%;
   }
   .subheading {
     font-size: 300%;
