--- a/src/Pages/Sponsors/Card.module.css
+++ b/src/Pages/Sponsors/Card.module.css
@@ -1,7 +1,7 @@
 .card {
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
+    align-items: center;
     justify-content: center;
     background-color: #FFF6EB;
     width: 30rem;
@@ -11,11 +11,11 @@
   }
   
   .card img {
+    /* align-items: center; */
     margin-top: 10%;
-    width: 100%;
-    border-radius: 20px;
-    max-width: 80%;
-    
+    width: 30vw;
+    border-radius: 10px;
+    height: 15vw;
   }
   
    .card h2 {
@@ -39,13 +39,27 @@
 
   @media screen and (max-width: 940px) {
     .card {
-      width: 50vw;
+      width: 45vw;
+    }
+    .card img {
+      /* align-items: center; */
+      margin-top: 10%;
+      width: 28vw;
+      border-radius: 9px;
+      height: 15vh;
     }
   }
 
   @media screen and (max-width: 746px) {
     .card {
       width: 40vw;
+    }
+    .card img {
+      /* align-items: center; */
+      margin-top: 10%;
+      width: 25vw;
+      border-radius: 7px;
+      height: 20vw;
     }
   }
 
@@ -55,15 +69,17 @@
       font-size: 0.8rem;
     }
     .card {
-      margin-top: -150%;
+      margin-top: 0%;
       width: 30vw;
       height: 90px;
     }
 
     .card img {
-      margin-top: 3rem;
-      width: 100%;
+      margin-top: 2rem;
+      width: 20vw;
       border-radius: 4px;
+      height: 20vh;
+      margin-bottom: -0.8rem;
       /* max-width: 80%; */
     }
   }
