--- a/src/Pages/Gallery/Components/imageAreaSmall.module.css
+++ b/src/Pages/Gallery/Components/imageAreaSmall.module.css
@@ -9,6 +9,7 @@
     margin: 8px;
     transition: 0.6s ease-in-out;
     /* position: static; */
+    object-fit: cover;
 }
 
 .i2
@@ -26,6 +27,7 @@
     border-bottom: 5px white solid;
     transition: 0.6s ease-in-out;
     margin: 8px;
+    object-fit: cover;
 }
 
 .i3 {
@@ -39,4 +41,5 @@
     background-color: bisque;
     margin: 8px;
     transition: 0.6s ease-in-out;
+    object-fit: cover;
 }
