--- a/src/Pages/LandingPage/styles/home.module.css
+++ b/src/Pages/LandingPage/styles/home.module.css
@@ -1,21 +1,67 @@
-.left{
-    height: 100vh;
+
+.container{
     width: 100vw;
-    z-index: 5;
+    height: 100vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    overflow-x: hidden;
+    background-image: url("../bg.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    animation: fadeIn 1s;
+    /* background-position: center; */
+
 }
 
-.main{
-    height: 100vh;
-    width: 100vw;
+.left{
+    min-width: 50%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
+    position: relative;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
+
+/* .leftImage{
+    width: 100%;
+    height: 100%;
+    
+} */
+
+.right{
+    min-width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* background-color: black; */
+    color: white;
+    line-height: 1;
+    font-family: 'myanmar-khyay-regular', sans-serif;
+    font-size: 3rem;
+    font-weight: bold;
+    text-shadow: -11px 12px 11px rgba(0, 0, 0, 0.81);
+    user-select: none;
+}
+
 .polygon{
-    height: 100vh;
-    width: 100vw;
+    position: relative;
+    margin-left: -60%;
+    margin-top: 10%;
+
+    background: rgba(255, 246, 235, 0.32);
+    border-radius: 107px;
+    transform: skew(-25deg);
+    width: 70%;
+    height: 70%;
+    left: 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -23,135 +69,94 @@
 }
 
 .sheild{
-    width: 20vw;
-    margin-top: 9%;
+    transform: skew(25deg);
+    width: 50%;
+    height: 50%;
 }
 
-.txt{
-    position: absolute;
-    top: 41vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100vw;
-}
 
-.blue{
-    z-index: 5;
-    position: relative;
-    left: 80.3%;
-    width: 80vw;
-}
-
-.stroke{
-    z-index: 6;
-    width: 80vw;
-    
-}
-
-.content{
-    z-index: 7;
-    position: relative;
-    right: 80.3%;
-    width: 80vw;
-}
-
-.udlogo{
-    width: 18vw;
-    opacity: 0.3;
-    margin-top: 3%;
-    transform:rotateZ(180deg);
-    z-index: 1;
-}
-
-.mvmlsc{
+.mobileTitle{
     display: none;
-    margin-top: 7%;
+}
+
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
 }
 
 
-@media screen and (max-width:1440px){
-    .udlogo{
-        width: 17vw;
-    }
+/* @media screen and (max-width: 1730px) {
     .sheild{
-        width: 20vw;
-    }
-    .txt{
-        top: 40vh;
-    }
-    .blue{
-        left: 80.3%;
-        width: 80vw;
-    }
-    .stroke{
-        width: 80vw;
-    }
-    .content{
-        right: 80.3%;
-        width: 80vw;
+        margin-left:5%;
+        height:45%;
     }
 }
-@media screen and (max-width:1210px){
-    .txt{
-        top: 44%;
-    }
-}
-@media screen and (max-width:1000px){
-    .txt{
-        top: 46%;
-    }
+
+@media screen and (max-width: 1500px){
     .sheild{
-        margin-top: 12%;
+        margin-left:10%;
+        height:40%;
     }
 }
-@media screen and (max-width:850px){
-    .txt{
-        top: 48%;
-    }
+@media screen and (max-width: 1300px){
     .sheild{
-        margin-top: 14%;
+        margin-left:15%;
+        height:35%;
+    }
+    .polygon{
+        height: 50%;
     }
 }
-@media screen and (max-width:780px){
-    .txt{
-        top: 48%;
-    }
+@media screen and (max-width: 1150px){
     .sheild{
-        margin-top: 0%;
+        margin-left:20%;
+       
     }
-}
-@media screen and (max-width:700px){
-    .txt{
-        top: 50%;
+    .polygon{
+        height: 45%;
     }
-}
-@media screen and (max-width:540px){
-    .mvmlsc{
-        display: block;
-        width:80vw;
-    }
-    .sheild{
-        width: 45vw;
-        margin-top: -65%;
-    } 
-    .txt, .udlogo{
+} */
+@media screen and (max-width: 950px){
+    .right{
         display: none;
     }
-}
-@media screen and (max-width:400px){
-    .txt, .udlogo{
-        display: none;
+    .container{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .left{
+        width: 100%;
+        justify-content: space-evenly;
+    }
+    .polygon{
+        transform: skew(0);
+        position: relative;
+        left: 32.5%;
+        height: 40%;
+        padding: 1.5rem;
     }
     .sheild{
-        width: 45vw;
-        margin-top: -65%;
-    } 
+        transform: skew(0);
+    }
+    .mobileTitle{
+        display: inline;
+        color: white;
+        /* letter-spacing: 0.2rem; */
+        font-size: xx-large;
+        text-align: center;
+        font-family: 'myanmar-khyay-regular', sans-serif;
+        font-weight: bolder;
+        padding-top: 1rem;
+    }
 }
 
-.stars{
-    position: absolute;
-    width: 100%;
-    height: 100vh;
-    
+@media screen and (max-width: 540px){
+    .sheild{
+        width: 70%;
+    }
+    .polygon{
+        height: 40%;
+        width: 70%;
+    }
 }
