change bg of gallery only

--- a/src/Pages/Gallery/Style/index.module.css
+++ b/src/Pages/Gallery/Style/index.module.css
@@ -1,8 +1,4 @@
-
-
-body
-{
+.galleryContainer{
     background-image: url(../Assets/bg.png);
-    background-size: cover;  
-   
+    background-size: cover; 
 }
