--- a/src/Pages/OurTeam/Style/ourteam.module.css
+++ b/src/Pages/OurTeam/Style/ourteam.module.css
@@ -57,7 +57,7 @@
   color: white;
   /* text-decoration: none; */
 
-  padding-top: 10%;
+  padding-top: 2%;
   margin-right: 5%;
   z-index: 1;
 }
@@ -130,20 +130,20 @@
 }
 /* ----------------CARD-------------------- */
 .wrapper {
-  padding-top: 1%;
+  padding-top: 3%;
   margin-left: 27%;
   display: grid;
   width: 50%;
   /* -----------------FIXED HOVER ISSUE------------------------ */
   /* grid-template-columns: repeat(auto-fit, minmax(10rem, 12rem)); */
   grid-template-columns: 180px 180px 180px 180px;
-  grid-auto-rows: 220px;
+  grid-auto-rows: 240px;
   /* gap: 5rem; */
   column-gap: 3rem;
   row-gap: 1.5rem;
   justify-content: center;
   align-items: center;
-  margin-bottom: 2%; 
+  margin-bottom: 12%; 
   animation: fadeIn 1s;
 }
 
@@ -162,7 +162,7 @@
 
 .card__body {
   /* position: absolute; */
-  height: 10rem;
+  height: 12rem;
   background-color: #26282a;
   border: #fff6eb solid 1px;
   border-radius: 18px;
@@ -172,19 +172,19 @@
 
 .card__image {
   /* position: absolute; */
-  height: 10rem;
+  height: 12rem;
   width: 100%;
-  z-index: 2;
+  /* z-index: 2; */
   /* object-fit:cover; */
   /* background-color: #26282A; */
 
-  filter: saturate(0%);
+  
 }
 .card__title {
-  display: none;
+
   /* padding: 0.2rem; */
   font-size: 90%;
-  padding-top: 4%;
+  padding-top: 5%;
   font-family: Poppins;
 
   color: #ffffff;
@@ -193,8 +193,9 @@
   padding: 0 1rem;
 }
 .card__btn {
-  display: none;
-  padding: 0rem;
+  display: flex;
+  justify-content: center;
+  padding: 1rem;
   font-family: inherit;
   font-weight: bold;
   font-size: 1rem;
@@ -205,33 +206,36 @@
   transition: background 200ms ease-in, color 1s ease-in;
 }
 
-.card:hover .card__image {
+/* .card:hover .card__image {
   transform-origin: bottom;
-  /* transform: translate(0px,-20px); */
+  /* transform: translate(0px,-20px); 
   transform: scale(1.3);
   overflow: visible;
   transition: 0.55s;
-}
-.card:hover .card__body {
-  transform: scale(1.1);
+ */
+/* .card:hover .card__body {
+  transform: scale(0.9);
   overflow: visible;
   transition: 0.85s;
-  border: #fa3966 solid 1px;
-}
+  border: #fa3966 solid 1px; */
 
-.card:hover .card__btn {
+
+/* .card:hover .card__btn {
   display: block;
   transition: 0.7s;
-}
-.card:hover .card__title {
+  position: relative;
+  bottom:-10px;
+} */
+.card> .card__title {
+  color: white;
   display: block;
   position: relative;
-  transition: 0.7s;
-}
-.card:hover .card__image {
+;}
+
+/* .card:hover .card__image {
   filter: saturate(100%);
   transition: 0.7s;
-}
+} */
 /* .container{
   
 } */
