--- a/src/Pages/OurTeam/Style/ourteam.module.css
+++ b/src/Pages/OurTeam/Style/ourteam.module.css
@@ -38,7 +38,7 @@
 .navbar {
   display: flex;
   /* justify-content: center; */
-  margin-top: 3rem; 
+  margin-top: 1rem; 
   /* text-decoration: none; */
   list-style-type: none;
   z-index: 13;
@@ -136,8 +136,8 @@
   width: 50%;
   /* -----------------FIXED HOVER ISSUE------------------------ */
   /* grid-template-columns: repeat(auto-fit, minmax(10rem, 12rem)); */
-  grid-template-columns: 180px 180px 180px 180px;
-  grid-auto-rows: 240px;
+  grid-template-columns: 186px 181px 183px 182px;
+    grid-auto-rows: 339px;
   /* gap: 5rem; */
   column-gap: 3rem;
   row-gap: 1.5rem;
@@ -162,22 +162,24 @@
 
 .card__body {
   /* position: absolute; */
-  height: 12rem;
+  height: 16rem;
   background-color: #26282a;
   border: #fff6eb solid 1px;
   border-radius: 18px;
   /* max-height: 12rem; */
   overflow: hidden;
+  width:105%;
 }
 
 .card__image {
   /* position: absolute; */
-  height: 12rem;
-  width: 100%;
+  height: 16rem;
+  width: 85%;
   /* z-index: 2; */
   /* object-fit:cover; */
   /* background-color: #26282A; */
-
+position: relative;
+right: -12px;
   
 }
 .card__title {
@@ -206,18 +208,21 @@
   transition: background 200ms ease-in, color 1s ease-in;
 }
 
-/* .card:hover .card__image {
+.card:hover .card__image {
   transform-origin: bottom;
-  /* transform: translate(0px,-20px); 
-  transform: scale(1.3);
+   transform: translate(0px,-20px); 
+  transform: scale(1.15);
   overflow: visible;
   transition: 0.55s;
- */
-/* .card:hover .card__body {
-  transform: scale(0.9);
+  width: 80%;
+  position: relative;
+  left: 18px;
+}
+.card:hover .card__body {
+  transform: scale(1.0);
   overflow: visible;
   transition: 0.85s;
-  border: #fa3966 solid 1px; */
+  border: #fa3966 solid 1px;}
 
 
 /* .card:hover .card__btn {
@@ -298,15 +303,19 @@ hr {
 
 @media (max-width: 530px) {
   .card {
-    height: 140px;
+    height: 250px;
   }
-
+  
   .wrapper {
     /* grid-template-columns: 180px ; */
     grid-template-columns: 140px 140px;
     grid-auto-rows: 210px;
     column-gap: 50px;
     margin-left: 25%;
+  }
+  .ourteam_wrapper__OmWwJ{
+    position: relative;
+    top: 46px;
   }
   .navbar {
     display: grid;
@@ -320,7 +329,7 @@ hr {
     margin-top: 20%;
     margin-right: auto;
     margin-left: auto;
-    padding: 0;
+    padding: 25px;
   }
   li{
     background-color: #6868689f !important;
@@ -338,9 +347,69 @@ hr {
   .image8 {
     display: none;
   }
+  .ourteam_card__75gtz:hover .ourteam_card__image__ZtcNY {
+
+    transform-origin: bottom;
+   
+    transform: scale(0);
+    overflow: visible;
+    transition: 0.55s;
+    width: 80%;
+    position: relative;
+    left: 18px;
+    height: 166px;
+  }
 }
 @media (max-width: 400px){
   .navbar{
     margin-top : 25% !important;
   }
-}
+  .ourteam_card__image__ZtcNY{
+    height: 169px;
+    /* width: 85%;
+    position: relative; */
+    right: -12px;
+  }
+  .wrapper {
+    margin-left: 24%;
+    height: 1000px;
+  }
+  .ourteam_wrapper__OmWwJ{
+    margin-left: 26%;
+    position: relative;
+    top: 31px;
+    grid-template-columns: 113px 137px;
+  }
+  .ourteam_wrapper{
+     margin-left: 22% !important; 
+    
+  }
+  .heading {
+    width: 99vw;
+    text-align: center !important;
+    margin: 0 auto;
+    position: absolute;
+    font-size: 4rem;
+    top: 30px;
+  }
+  /* .navbar {
+    margin-right: auto;
+    margin-left: auto;
+    justify-content: center;
+  } */
+  .navbar li {
+    font-size: 1.5rem;
+    margin-top: 17%;
+  }
+  .image7 {
+    display: none;
+  }
+  .image8 {
+    display: none;
+  }
+  .ourteam_heading__otokg{
+    position: relative;
+    height: 45px;
+  }
+
+  }
