--- a/src/Pages/OurTeam/Style/ourteam.module.css
+++ b/src/Pages/OurTeam/Style/ourteam.module.css
@@ -12,6 +12,21 @@
     100% { opacity: 1; }
 }
 
+
+
+.namebox{
+  display:flex;
+  flex-direction: row;
+  justify-content: center;
+  position: relative;
+  top:129px;
+  color:white;
+  font-size: 1.5rem;
+  height: 12vh;
+
+}
+
+
 .heading {
   position: fixed;
   width: 344px;
